# CQUT-DataStructureCourseDesign-IOT

./: README.md
River/: River.pro  mainwindow.cpp  mainwindow.h  river_core.c  river_core.h
eight_queen/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  queens.c  queens.h
huffman/: CMakeLists.txt  huffman.c  huffman.h  main.c
polynomial/: CMakeLists.txt  main.c  polynomial.c  polynomial.h
sticksorter/: StickSorter.pro  mainwindow.cpp  mainwindow.h  stick_sorter.c  stick_sorter.h
